test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/array_of_strings.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: strcmp
        List[2]: 
          TIdentifier: s1
          TIdentifier: s2
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Pointer: 
              Char: 
            Pointer: 
              Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: strings
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[3]: 
                              TChar: 121
                              TChar: 101
                              TChar: 115
                          None: 
                        None: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[2]: 
                              TChar: 110
                              TChar: 111
                          None: 
                        None: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[5]: 
                              TChar: 109
                              TChar: 97
                              TChar: 121
                              TChar: 98
                              TChar: 101
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 4
                    Pointer: 
                      Char: 
                  None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: strings
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[3]: 
                          TChar: 121
                          TChar: 101
                          TChar: 115
                      None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: strings
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[2]: 
                          TChar: 110
                          TChar: 111
                      None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CFunctionCall: 
                  TIdentifier: strcmp
                  List[2]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: strings
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    CString: 
                      CStringLiteral: 
                        List[5]: 
                          TChar: 109
                          TChar: 97
                          TChar: 121
                          TChar: 98
                          TChar: 101
                      None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CSubscript: 
                  CVar: 
                    TIdentifier: strings
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
