test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_wrong_type_nested.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: nested
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[1]: 
                              TChar: 97
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 1
                    Array: 
                      TLong: 2
                      UInt: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
